# adk-py-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
